# SpecKit

./: .core-paths.md  .gitignore  .graphifyignore  3gpp-crawler.toml  CLAUDE.md  README.md  Roadmap.md  STRUCTURE.md  pyproject.toml  Добро пожаловать.md
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: author.md  formatter.md  librarian.md  linker.md  researcher.md  reviewer.md  specdownloader.md  specextractor.md
.claude/includes/: 3gpp-crawler.md  agents.md  incoming.md  skills.md  speckit.md  standards.md  structure.md
.claude/scripts/: spec_download.py
.obsidian/: community-plugins.json  graph.json
.obsidian/templates/: t-concept.md  t-entity.md  t-note.md  t-reference.md  t-summary.md  t-synthesis.md
Clippings/: HelloSTK - Cellular Network Infrastructure - Open Source Mobile Communications.md  RuimTools JavaCard best programming guidelines.md  RuimTools JavaCard source samples.md  View - UE Capability Parser Web.md
Specifications/: .category-map.md
Specifications/Books/: From_GSM_to_LTE-Advanced_2e.txt
Specifications/JavaCard/: JavaCard_3.0.5_AID_API.html  Java_Card_Stepping_Stones.txt  (+1 more)
_pipeline/: .spec-registry.md  __init__.py  __main__.py  _download_spec.py  _metadata_db.py  _resolve_spec.py  cli.py  config.py  extract_docling.py  extract_docx.py  extract_pypdf2.py  registry.py
_tech/: BACKLOG.md  INDEX.md  README.md  graphify-scope.md
notes/: 2026-04-30.md  EF_SPN_PNN.md  Глоссарий.md  Как установить апплет.md  Шпаргалка APDU.md
outputs/: IMPROVEMENT_PLAN.md  STATUS_AND_PLAN.md
specs-extracted/: INDEX.md
wiki/: index.md
(+226 files in other folders)
