[project]
name = "obsidiandb-speckit"
version = "0.1.0"
description = "ObsidianDB specification pipeline — download & extract 3GPP specs"
requires-python = ">=3.13,<3.14"
dependencies = [
    "docling>=2.93.0",
    "httpx>=0.28.0",
    "pypdf2>=3.0",
    "rich>=14.2.0",
    "pyyaml>=6.0",
    "torch>=2.12.0",
]
